--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -113,12 +113,13 @@ body {
 }
 
 .add-item {
-    margin-top: 10px;
+    margin: 10px;
     padding: 10px 30px;
     background: green;
     color: white;
     border-radius: 10px;
     border: none;
+
 }
 
 .add-member {
